<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bn_home"
        android:icon="@drawable/bn_selector_home"
        android:title="@string/bn_item_home" />

    <item
        android:id="@+id/bn_quotation"
        android:icon="@drawable/bn_selector_quotation"
        android:title="@string/bn_item_quotation" />

    <item
        android:id="@+id/bn_transaction"
        android:icon="@drawable/bn_selector_transaction"
        android:title="@string/bn_item_transaction" />

    <item
        android:id="@+id/bn_contract"
        android:icon="@drawable/bn_selector_contract"
        android:title="@string/bn_item_contract" />

    <item
        android:id="@+id/bn_capital"
        android:icon="@drawable/bn_selector_capital"
        android:title="@string/bn_item_capital" />

</menu>

